# S8n-System

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: USER_GUIDE.md
src/: config.rs  main.rs  ui.rs
src/pm/: builtin.rs  mod.rs
src/tui/: color_picker.rs  file_manager.rs  grid_table.rs  menu.rs  mod.rs  paginator.rs  tabs.rs  theme.rs
