[package]
name = "s8n"
version = "0.1.0"
edition = "2021"
description = "A universal package manager wrapper with a beautiful TUI"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = [] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
which = "6.0"
futures = "0.3"
async-trait = "0.1.89"
unicode-width = "0.2"

# bubbletea-rs ecosystem for lipgloss-style table grid rendering and gradient progress bars
bubbletea-rs = { path = "/home/lilith/bubbletea-rs" }
lipgloss-extras = { version = "0.1.1", features = ["full"] }
rand = "0.8"
